# Snake

./: CMakeLists.txt  README.txt
cmake/: cocos2d-x-download.cmake  cocos2d-x.cmake
game/: CMakeLists.txt
game/inc/: AppDelegate.hpp  AppMacros.hpp  EntitiesManager.hpp  Entity.hpp  GUILayer.hpp  LaunchGameScene.hpp  MainGameScene.hpp  MainGameSceneLayer.hpp  Purse.hpp  SnakeBodySegment.hpp  SnakeEntity.hpp  SpawnCoinAction.hpp  SpawnSnakeAction.hpp  SpawnSnakeSegmentAction.hpp  main.hpp
game/src/: AppDelegate.cpp  EntitiesManager.cpp  Entity.cpp  GUILayer.cpp  LaunchGameScene.cpp  MainGameScene.cpp  MainGameSceneLayer.cpp  Purse.cpp  SnakeBodySegment.cpp  SnakeEntity.cpp  SpawnCoinAction.cpp  SpawnSnakeAction.cpp  SpawnSnakeSegmentAction.cpp  main.cpp
